# ubittool

./: .appveyor.yml  .coveragerc  .gitignore  .travis.yml  LICENSE  MANIFEST.in  Pipfile  README.md  make.py  pyproject.toml  requirements.txt  setup.py  text.hex  ubitextract.py
.github/workflows/: build.yml  codeql-analysis.yml  test.yml
docs/: README.md  _config.yml  contributing.md  development.md  index.md  installation.md  test-page.md  usage.md
package/: pyinstaller-cli.spec  pyinstaller-gui.spec
tests/: test_cli.py  test_cmds.py  test_gui.py  test_programmer.py  test_system_cli.py
ubitextract/: __init__.py  __main__.py  cmd.py  gui.py
ubitflashtool/: __init__.py  __main__.py  cli.py  cmd.py  cmds.py  gui.py  programmer.py
ubittool/: __init__.py  __main__.py  cli.py  cmds.py  gui.py  programmer.py
