[tool.poetry]
name = "ubittool"
version = "0.4.0"
description = "Tool to interface with the BBC micro:bit."
authors = ["Carlos Pereira Atencio <carlosperate@embeddedlog.com>"]
license = "MIT"
homepage = "https://carlosperate.github.io/ubittool/"
repository = "https://github.com/carlosperate/ubittool/"
documentation =  "https://carlosperate.github.io/ubittool/"
keywords = ["microbit", "micro:bit", "bbcmicrobit", "ubittool"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: MacOS X",
    "Environment :: Win32 (MS Windows)",
    "Environment :: X11 Applications",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Topic :: Education",
    "Topic :: Software Development :: Embedded Systems",
]

[tool.poetry.dependencies]
python = "^3.5"
IntelHex = "^2.2.1"
uflash = ">=1.1.0,<1.2.1"
pyocd = "0.19.0"
click = "^7.0"

[tool.poetry.dev-dependencies]
PyInstaller = "^3.3"
# PyOCD needs this as a setup_requires, for some reason 'pipenv install' in
# Travis doesn't pick it up and PyOCD fails to install or run
setuptools_scm = "*"
# Linting
flake8 = "*"
flake8-bugbear = {version = "*", python = "^3.5" }
black = {version = "19.3b0", python = "^3.6" }
flake8-builtins = "*"
flake8-docstrings = "*"
# Tests
pytest = "*"
pytest-cov = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
ubit = 'ubittool.__main__:main'
